--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 
 ###> symfony/framework-bundle ###
 /.env.local
+/.env.*.local
+/.env.test
+/.env.dev
+/.env.local
 /.env.local.php
 /.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
