--- a/.env
+++ b/.env
@@ -37,7 +37,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://mailhog:1025?encryption=null&auth_mode=null
+MAILER_DSN=smtp://127.0.0.1:1025?encryption=null&auth_mode=null
 ###< symfony/mailer ###
 
 ###> symfony/mercure-bundle ###
