--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -13,7 +13,7 @@ framework:
                     max_retries: 3
                     multiplier: 2
             failed: 'doctrine://default?queue_name=failed'
-            # sync: 'sync://'
+            sync: 'sync://'
 
         default_bus: messenger.bus.default
 
@@ -21,10 +21,10 @@ framework:
             messenger.bus.default: []
 
         routing:
-            Symfony\Component\Mailer\Messenger\SendEmailMessage: async
+            # Route emails to sync transport for immediate delivery
+            Symfony\Component\Mailer\Messenger\SendEmailMessage: sync
+            # Keep other messages async
             Symfony\Component\Notifier\Message\ChatMessage: async
             Symfony\Component\Notifier\Message\SmsMessage: async
             App\Message\SendReservationEmailNotification: async
-
-            # Route your messages to the transports
-            # 'App\Message\YourMessage': async
+            'App\Message\*': async
