Branlette sur le design du front parce que j'aime bien et ajout de la totalité des CRUD pour toutes les entités

--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -8,6 +8,10 @@ framework:
     #esi: true
     #fragments: true
 
+    error_controller: error_controller
+    exceptions:
+        Symfony\Component\HttpKernel\Exception\NotFoundHttpException: null
+
 when@test:
     framework:
         test: true
