--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,7 +16,10 @@ security:
         main:
             lazy: true
             provider: app_user_provider
+            entry_point: App\Security\AppCustomAuthenticator
             custom_authenticator: App\Security\AppCustomAuthenticator
+            form_login:
+                enable_csrf: true
             logout:
                 path: app_logout
                 # where to redirect after logout
