--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ APP_SECRET=
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+DATABASE_URL=""
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
@@ -37,19 +37,23 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://127.0.0.1:1025?encryption=null&auth_mode=null
+MAILER_DSN=smtp://localhost:1025?encryption=null&auth_mode=null
 ###< symfony/mailer ###
 
 ###> symfony/mercure-bundle ###
 # See https://symfony.com/doc/current/mercure.html#configuration
 # The URL of the Mercure hub, used by the app to publish updates (can be a local URL)
-MERCURE_URL=https://example.com/.well-known/mercure
+MERCURE_URL=
 # The public URL of the Mercure hub, used by the browser to connect
-MERCURE_PUBLIC_URL=https://example.com/.well-known/mercure
+MERCURE_PUBLIC_URL=
 # The secret used to sign the JWTs
-MERCURE_JWT_SECRET="!ChangeThisMercureHubJWTSecretKey!"
+MERCURE_JWT_SECRET=""
 ###< symfony/mercure-bundle ###
 
 ###> php-amqplib/rabbitmq-bundle ###
 RABBITMQ_URL=amqp://guest:guest@localhost:5672
 ###< php-amqplib/rabbitmq-bundle ###
+
+###> symfony_reset_password ###
+RESET_PASSWORD_SECRET=
+###< symfony_reset_password ###
